syntax = "proto3";

package beacon_chain_timings;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/ethpandaops/lab/pkg/proto/beacon_chain_timings";

// TimeWindowConfig represents a time window for processing
message TimeWindowConfig {
  string name = 1;
  string file = 2;
  int64 range_ms = 3; // Duration in milliseconds
  int64 step_ms = 4;  // Duration in milliseconds
}

// ProcessorState tracks the processing state for a specific processor
message ProcessorState {
  string network = 1;
  google.protobuf.Timestamp last_processed = 2;
}

// TimingData represents block timing statistics in time windows
message TimingData {
  string network = 1;
  google.protobuf.Timestamp timestamp = 2;
  repeated int64 timestamps = 3;
  repeated double mins = 4;
  repeated double maxs = 5;
  repeated double avgs = 6;
  repeated double p05s = 7;
  repeated double p50s = 8;
  repeated double p95s = 9;
  repeated int64 blocks = 10;
  
  // Validator timing data
  message ValidatorCategory {
    map<string, int32> categories = 1; // timing category -> count
  }
  map<string, ValidatorCategory> validators = 11; // validator -> timing categories
}

// SizeCDFData represents size CDF (Cumulative Distribution Function) data
message SizeCDFData {
  string network = 1;
  google.protobuf.Timestamp timestamp = 2;
  repeated int64 sizes_kb = 3;
  
  map<string, double> mev = 4;
  map<string, double> non_mev = 5;
  map<string, double> solo_mev = 6;
  map<string, double> solo_non_mev = 7;
  map<string, double> all = 8;
  
  message DoubleList {
    repeated double values = 1;
  }
  map<string, DoubleList> arrival_times_ms = 9;
}



// Service definitions
service BeaconChainTimingsService {
  // Get timing data for a specific network and time window
  rpc GetTimingData (GetTimingDataRequest) returns (GetTimingDataResponse);
  
  // Get size CDF data for a specific network
  rpc GetSizeCDFData (GetSizeCDFDataRequest) returns (GetSizeCDFDataResponse);
}

// Request and response messages for the service methods
message GetTimingDataRequest {
  string network = 1;
  string window_name = 2;
  google.protobuf.Timestamp start_time = 3;
  google.protobuf.Timestamp end_time = 4;
}

message GetTimingDataResponse {
  repeated TimingData data = 1;
}

message GetSizeCDFDataRequest {
  string network = 1;
  google.protobuf.Timestamp start_time = 2;
  google.protobuf.Timestamp end_time = 3;
}

message GetSizeCDFDataResponse {
  repeated SizeCDFData data = 1;
}
